--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="container mx-auto px-6 py-8 text-center text-gray-500">
             <p class="mb-2"><a href="support.html" class="hover:text-blue-300">Support & Disclaimer</a></p>
             <!-- IMPORTANT: Replace [Your Full Name] with your name -->
-            <p>&copy; 2025 [Your Full Name]. All rights reserved.</p>
+            <p>&copy; 2025 Oswaldo Villarreal. All rights reserved.</p>
         </div>
     </footer>
 
