--- a/index.html
+++ b/index.html
@@ -75,9 +75,15 @@
     <!-- Footer -->
     <footer class="bg-gray-800 mt-12">
         <div class="container mx-auto px-6 py-8 text-center text-gray-500">
-            <p class="mb-2"><a href="support.html" class="hover:text-blue-300">Support & Disclaimer</a></p>
+            <div class="flex justify-center space-x-4 mb-2">
+                <a href="support.html" class="hover:text-blue-300">Support & Disclaimer</a>
+                <span>|</span>
+                <a href="privacy.html" class="hover:text-blue-300">Privacy Policy</a>
+                <span>|</span>
+                <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/" target="_blank" class="hover:text-blue-300">License Agreement</a>
+            </div>
             <!-- IMPORTANT: Replace [Your Full Name] with your name -->
-            <p>&copy; 2025 Oswaldo Villarreal. All rights reserved.</p>
+            <p>&copy; 2025 [Your Full Name]. All rights reserved.</p>
         </div>
     </footer>
 
