--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/" target="_blank" class="hover:text-blue-300">License Agreement</a>
             </div>
             <!-- IMPORTANT: Replace [Your Full Name] with your name -->
-            <p>&copy; 2025 [Your Full Name]. All rights reserved.</p>
+            <p>&copy; 2025 Oswaldo Villarreal. All rights reserved.</p>
         </div>
     </footer>
 
